--- a/package.json
+++ b/package.json
@@ -3,16 +3,26 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start"
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "postinstall": "remotedev-debuger"
   },
   "dependencies": {
     "base-64": "^0.1.0",
+    "immutable": "^3.8.1",
     "react": "15.2.1",
     "react-native": "^0.30.0",
+    "react-native-gifted-listview": "0.0.15",
     "react-native-material-design": "^0.3.7",
     "react-native-material-kit": "^0.3.2",
+    "react-native-navigation-redux-helpers": "^0.4.1",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
+    "redux-immutable": "^3.0.8",
     "redux-thunk": "^2.1.0"
+  },
+  "devDependencies": {
+    "remote-redux-devtools": "^0.4.7",
+    "remote-redux-devtools-on-debugger": "^0.6.2",
+    "remotedev-server": "^0.1.8"
   }
 }
