--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -3,3 +3,5 @@ rootProject.name = 'yygh'
 include ':app'
 include ':react-native-material-kit'
 project(':react-native-material-kit').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-material-kit/android')
+include ':reactamaplocation'
+project(':reactamaplocation').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-amap-location')
