--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "immutable": "^3.8.1",
     "react": "15.2.1",
     "react-native": "^0.30.0",
+    "react-native-amap-location": "0.0.4",
     "react-native-gifted-listview": "0.0.15",
     "react-native-material-design": "^0.3.7",
     "react-native-material-kit": "^0.3.2",
